<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="action_settings">Settings</string>

    <!-- Texte page login -->
    <string name="password_field">Password</string>
    <string name="login_field">Login</string>
    <string name="login_intro">Connexion</string>
    <string name="validate_button">Validate</string>

    <!-- Texte page home -->
    <string name="home_intro">Hello, What do you wish to do ?</string>
    <string name="life_cycle_field">Life Cycle</string>
    <string name="web_services_field">Web Services</string>
    <string name="permission_field">Permissions</string>
    <string name="save_field">Save</string>
    <string name="logOut_button">Log Out</string>

    <!-- Texte page formulaire -->
    <string name="form_intro">Form</string>
    <string name="birthday">Your Birthday</string>
    <string name="fields_empty">Please fill up all fields</string>
    <string name="first_name">Your first name</string>
    <string name="last_name">Your last name</string>
    <string name="readButton">Read</string>
    <string name="saveFormButton">Back Up</string>
    <string name="user_info">User Information</string>
    <string name="pop_up_button">Back</string>
    <string name="your_age">Your age</string>

    <!-- Texte cycle de vie et fragments -->
    <string name="first_fragment_field">I am the first fragment</string>
    <string name="second_fragment_field">I am the second fragment</string>
    <string name="swipe_button">Swipe to second</string>
    <string name="activity_state">Activity State</string>

    <!-- Texte permissions -->
    <string name="permissions_intro">Android information</string>
    <string name="intentChooser_title">Choose your picture library</string>
    <string name="location_lat">Latitude</string>
    <string name="location_long">Longitude</string>
    <string name="location">Location:</string>

    <!-- Texte Web services -->
    <string name="url_web_service">https://randomuser.me/api/?results=20</string>
    <string name="list_users">Users</string>
    <string name="error_text">That didn\'t work!</string>
    <string name="profile_intro">Contact Information:</string>
    <string name="user_chosen">user_chosen</string>

    <!-- <string name=""></string> -->
</resources>