<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/isenLogoHome"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/isen" />

    <TextView
        android:id="@+id/home_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/home_intro"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isenLogoHome" />

    <ImageButton
        android:id="@+id/cycleButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_intro"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cycleButton"
        app:layout_constraintTop_toBottomOf="@+id/home_intro"
        app:srcCompat="@android:drawable/stat_notify_sdcard" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/life_cycle_field"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:srcCompat="@android:drawable/stat_sys_download" />

    <TextView
        android:id="@+id/life_cycle_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/life_cycle_field"
        app:layout_constraintEnd_toStartOf="@+id/save_field"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycleButton" />

    <TextView
        android:id="@+id/save_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/life_cycle_field"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <TextView
        android:id="@+id/permission_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_field"
        app:layout_constraintEnd_toStartOf="@+id/web_services_field"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/web_services_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_services_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/permission_field"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/logOut_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission_field" />

</androidx.constraintlayout.widget.ConstraintLayout>